Improve recording quality and support idle IMU preview
